--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "jexl": "^2.3.0",
     "ngx-schema-form": "^2.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "z-schema": "^6.0.1",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
